# AIGeneratedTexts

./: .gitignore  Dockerfile  README.md  data.dvc  docker-compose.yml  dvc.yaml  pyproject.toml
ai_detector/: classifiers.py  infer.py  train.py
configs/: config.yaml  data_paths.yaml  model_config.yaml
configs/data/: data_paths.yaml
configs/model/: model_config.yaml
data/: .gitignore  train_split.csv.dvc  val_split.csv.dvc
model/: dataset.py
