[tool.poetry]
name = "llm-detection"
version = "0.1.0"
description = "Проект для определения AI-сгенерированных эссе"
authors = ["Aleksey Kalyagin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.2.3"
torch = ">=1.6.0, <3.0.0"
pytorch-lightning = ">=1.6.0, <3.0.0"
transformers = "4.29.1"
pre-commit = "^2.20.0"
dvc = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"